--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ ul{
 /*header */
 header{
   background:#35424a;
-  color: #ffff;
+  color: #ffffff;
   padding-top:20px;
   min-height: 70px;
   border-bottom:5px solid #87CEFA;
@@ -87,6 +87,39 @@ header a:hover{
   font-size: 30px;
   text-align: center;
   color: #404040;
+}
+
+/* login modal */
+.modal{
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,.5);
+}
+
+.modal-content{
+  background-color: #f4f4f4;
+  margin: 20% auto;
+  padding: 20px;
+  width: 70%;
+  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2),
+  0 7px 20px 0 rgba(0,0,0,0.17);
+}
+
+.close-button{
+  float: right;
+  font-size: 30px;
+}
+
+.close-button:hover, .close-button:focus{
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 /* footer */
