--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
   font: 15px/1.5 Arial, Helvetica, sans-serif;
   padding: 0;
   background-color: white;
-  background:url('../img/ice.jpg') no-repeat;
+  background:url('../img/background.jpg') no-repeat;
 }
 
 /* global */
@@ -22,16 +22,16 @@ ul{
 
 /*header */
 header{
-  background:#35424a;
+  background:#b3b3b3;
   color: #ffffff;
-  padding-top:20px;
+  padding-top:0px;
   min-height: 70px;
-  border-bottom:5px solid #87CEFA;
+  border-bottom:3px solid #87CEFA;
 
 }
 
 header a{
-  color: #ffffff;
+  color: #87CEFA;
   text-decoration: none;
   text-transform: uppercase;
   font-size: 16px;
@@ -41,11 +41,12 @@ header li{
   float: left;
   display: inline;
   padding: 0 20px 0 20px;
+  border: 1px solid #87CEFA;
 }
 
 header .logo{
   float:left;
-  margin-bottom: 10px;
+  margin: 0;
 }
 
 header .logo h1{
@@ -57,7 +58,7 @@ header .logo h1{
 
 header nav{
   float: right;
-  margin-top: 15px;
+  margin-top: 25px;
 }
 
 header a:hover{
@@ -66,11 +67,11 @@ header a:hover{
 }
 
 #open-button{
-  background-color: #35424a;
+  background-color: #b3b3b3;
   border: none;
   text-transform: uppercase;
   font-size: 16px;
-  color: #ffffff;
+  color: #87CEFA;
 }
 
 #open-button:hover{
@@ -201,11 +202,48 @@ span.register{
   background-color: rgba(0,0,0,.5);
 }
 
+.register-modal-content{
+  background-color: #f4f4f4;
+  margin: 20% auto;
+  padding: 0px;
+  width: 50%;
+  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2),
+  0 7px 20px 0 rgba(0,0,0,0.17);
+}
+
+
+
 
 @keyframes modalopen {
   from{opacity: 0}
   to{opacity: 1}
 
+}
+
+/* ABOUT PAGE */
+.about-title{
+  font-family: cursive;
+  font-size: 60px;
+  color: #87CEFA;
+  text-shadow: -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;
+  text-align: left;
+  margin-left: 11%;
+  margin-bottom: 0;
+}
+
+.about-container{
+  border: 2px solid #87CEFA;
+  margin-left: 10%;
+  margin-right: 10%;
+  background: #ffffff;
+}
+.about-p{
+  font: 15px/1.5 Arial, Helvetica, sans-serif;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 /* footer */
